--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
-h1 {
+#title {
   text-align: center;
-  font-size: 61px;
+  font-size: 51px;
   color: blue;
   background-color: red
 }
@@ -16,19 +16,19 @@ img {
   border: 4px black
 
 }
-h5 {
+.links {
   text-align: center;
   padding: 0px
 }
 a {
   color: black
 }
-@media (min-width: 500px) {
+@media (min-width: 600px) {
  body {
      background-color: beige;
  }
  }
- @media (max-width: 499px) {
+ @media (max-width: 599px) {
  body {
      background-color: #52764e;
  }
