--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,8 @@
   text-align: center;
   font-size: 51px;
   color: blue;
-  background-color: red
+  background-color: red;
+  margin: auto auto 40px auto;
 }
 
 h3 {
